@@ -1,11 +1,10 @@
 package br.com.lett.crawlernode.crawlers.corecontent.brasil;
 
 
-import br.com.lett.crawlernode.core.fetcher.FetchMode;
-import br.com.lett.crawlernode.core.fetcher.ProxyCollection;
+import br.com.lett.crawlernode.core.fetcher.methods.FetcherDataFetcher;
 import br.com.lett.crawlernode.core.session.Session;
 import br.com.lett.crawlernode.crawlers.extractionutils.core.TrustvoxRatingCrawler;
-import br.com.lett.crawlernode.crawlers.extractionutils.core.VTEXOldScraper;
+import br.com.lett.crawlernode.crawlers.extractionutils.core.VTEXNewScraper;
 import br.com.lett.crawlernode.util.CommonMethods;
 import br.com.lett.crawlernode.util.Logging;
 import models.RatingsReviews;
@@ -17,18 +16,16 @@ import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.regex.Pattern;
 
-public class BrasilEpocacosmeticosCrawler extends VTEXOldScraper {
+public class BrasilEpocacosmeticosCrawler extends VTEXNewScraper {
 
    private static final String HOME_PAGE = "https://www.epocacosmeticos.com.br/";
    private static final String MAIN_SELLER_NAME_LOWER = "época cosméticos";
 
    public BrasilEpocacosmeticosCrawler(Session session) {
       super(session);
-      config.setFetcher(FetchMode.FETCHER);
    }
 
    @Override
@@ -44,20 +41,24 @@ public class BrasilEpocacosmeticosCrawler extends VTEXOldScraper {
 
    @Override
    protected List<String> getMainSellersNames() {
-      return Arrays.asList(MAIN_SELLER_NAME_LOWER);
+      return List.of(MAIN_SELLER_NAME_LOWER);
    }
 
    @Override
    protected RatingsReviews scrapRating(String internalId, String internalPid, Document doc, JSONObject apiJson) {
       TrustvoxRatingCrawler trustVox = new TrustvoxRatingCrawler(session, "393", logger);
-      return trustVox.extractRatingAndReviewsForVtex(doc, dataFetcher).getRatingReviews(internalId);
+      JSONObject json = crawlSkuJsonVTEX(doc, session);
+      String id = json.optString("productId");
+      if (id != null) {
+         return trustVox.extractRatingAndReviews(id, doc, new FetcherDataFetcher());
+      } else {
+         return new TrustvoxRatingCrawler(session, "393", null).extractRatingAndReviews(internalPid, doc, new FetcherDataFetcher());
+      }
    }
 
-
-   @Override
-   public  JSONObject crawlSkuJsonVTEX(Document document, Session session) {
+   public JSONObject crawlSkuJsonVTEX(Document document, Session session) {
       Elements scriptTags = document.getElementsByTag("script");
-      String scriptVariableName = "vtex.events.addData(";
+      String scriptVariableName = "var skuJson_1 = ";
       JSONObject skuJson = new JSONObject();
       String skuJsonString = null;
 
@@ -76,7 +77,7 @@ public class BrasilEpocacosmeticosCrawler extends VTEXOldScraper {
             skuJson = new JSONObject(skuJsonString);
 
          } catch (JSONException e) {
-            Logging.printLogWarn(logger, session, "Error creating JSONObject from var skuJson_0");
+            Logging.printLogWarn(logger, session, "Error creating JSONObject from var skuJson_1");
             Logging.printLogWarn(logger, session, CommonMethods.getStackTraceString(e));
          }
       }
